--- a/cardapio.html
+++ b/cardapio.html
@@ -17,6 +17,105 @@
         </ul>
     </nav>
 </header>
+<main>
+    <article>
+        <h2>Cardápio</h2>
+        <h3>Pizzas</h3>
+        <table border="1">
+            <tr>
+                <th>Mussarela</th><th>grande-80.00</th><th>pequena-50.00</th>
+            </tr>
+            <tr>
+                <td>Milho,mussarela,azeitona,oregano</td>
+            </tr>
+            <tr>
+                <th>Calabresa</th><th>grande-85.00</th><th>pequena-55.00</th>
+            </tr>
+            <tr>
+                <td>Calabresa,mussarela,milho,oregano</td>
+            </tr>
+            <tr>
+                <th>Nordestina</th><th>grande-90.00</th><th>pequena-70.00</th>
+            </tr>
+            <tr>
+                <td>Milho,mussarela,carne de sol,tomate,pimentão,cebola,azeitona,oregano</td>
+            </tr>
+            <tr>
+                <th>Frango</th><th>grande-85.00</th><th>pequena-65.00</th>
+            </tr>
+            <tr>
+                <td>Milho,mussarela,frango,azeitona,oregano</td>
+            </tr>
+            <tr>
+                <tr>
+            <th>Frango c/ Catupiry</th><th>grande-95.00</th><th>pequena-75.00</th>
+                </tr>
+                <tr>
+                    <td>Milho,mussarela,frango,catupiry,azeitona,oregano</td>
+                </tr>
+                <tr>
+                <th>Pressunto</th><th>grande-80.00</th><th>pequena-60.00</th>
+            </tr>
+            <tr>
+                <td>Milho,mussarela,pressunto,azeitona,oregano</td>
+            </tr>
+            <tr>
+                <th>Frango</th><th>grande-85.00</th><th>pequena-65.00</th>
+            </tr>
+            <tr>
+                <td>Milho,mussarela,frango,azeitona,oregano</td>
+            </tr>
+            <tr>
+                <th>Toscana</th><th>grande-85.00</th><th>pequena-65.00</th>
+            </tr>
+            <tr>
+                <td>Milho,mussarela,calabresa,ovo,azeitona,oregano</td>
+            </tr>
+            <tr>
+                <th>Atum</th><th>grande-80.00</th><th>pequena-60.00</th>
+            </tr>
+            <tr>
+                <td>Atum ralado,mussarela,cebola,azeitona,oregano</td>
+            </tr>
+        </table>
+    </article>
+    <article>
+        <h3>Bebidas</h3>
+        <table border="1">
+            <tr>
+                <th>Refrigerantes</th><th>grande 2L-20.00</th><th>pequena 350ml-12.00</th>
+            </tr>
+            <tr>
+                <td>coca-cola,fanta,guaraná,sóda</td>
+            </tr>
+            <tr>
+                <th>Sucos naturais</th><th>15.00</th>
+            </tr>
+            <tr>
+                <td>Laranja,maracuja,manga,acerola</td>
+            </tr>
+            <tr>
+                <th>Cerveja</th><th>garrafa-20.00</th><th>lata-10.00</th>
+            </tr>
+            <tr>
+                <td>Skol,Brahma,Itaipava</td>
+            </tr>
+            <tr>
+                <th>Cerveja</th><th>garrafa-25.00</th><th>lata-15.00</th>
+            </tr>
+            <tr>
+                <td>Heineken,Budweiser,Original,Stella</td>
+            </tr>
+            <tr>
+                <tr>
+            <th>Chopp</th><th>claro-15.00</th><th>escuro-15.00</th>
+                </tr>
+                <tr>
+                    <td>Brahma</td>
+                </tr>
+        </table>
+    </article>
+</main>
 
 <footer>
     <p>&copy; 2024-Pizzaria</p>
