--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
     <main>
         <article>
             <h2></h2>
-            <img src="./images.jfif" alt="Imagem pizza">
+            <img src="./imagens/images.jfif" alt="Imagem pizza">
         </article>
-        <article>
+        
         <h3>Conheça nosso ambiente</h3>
+        <article class="imagem">
+            <figure>
+        <img src="./imagens/images (1).jfif" alt="">
+        <img src="./imagens/imagem2.jpg" alt="">
+        <img src="./imagens/imagem1.jpg" alt="">
+            </figure>
         </article>
     </main>
     <footer>
-        <p>&copy; 2024-Pizzaria</p>
+        <p>&copy; 2024-Pizzaria a menhor da região</p>
     </footer>
 </body>
 </html>
