--- a/cardapio.html
+++ b/cardapio.html
@@ -21,7 +21,7 @@
     <article>
         <h2>Cardápio</h2>
         <h3>Pizzas</h3>
-        <table border="1">
+        <table>
             <tr>
                 <th>Mussarela</th><th>grande-80.00</th><th>pequena-50.00</th>
             </tr>
