--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Pizzaria</h1>
+    <h1>Bem vindo à Pizzaria</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -18,18 +18,22 @@
     </nav>
 </header>
     <main>
-        <article>
+        <article >
             <h2></h2>
-            <img src="./imagens/images.jfif" alt="Imagem pizza">
+            <img src="./imagens/25119718-tijolo-forno-cozido-pizza-fresco-mussarela-rustico-ambiente-gerado-de-ai-foto.jpg" alt="Imagem pizza">
         </article>
+        <h3>Nosso Endereço</h3>
+        <h2>Rua Tito 54 Alto da Lapa S.Paulo</h2>
+        <h2>Tel:11-984756351</h2>
+
+
         
         <h3>Conheça nosso ambiente</h3>
-        <article class="imagem">
-            <figure>
-        <img src="./imagens/images (1).jfif" alt="">
-        <img src="./imagens/imagem2.jpg" alt="">
-        <img src="./imagens/imagem1.jpg" alt="">
-            </figure>
+        <article class="imagem"> 
+        <img src="./imagens/ambiente-interno.jpg"alt="">
+        <img src="./imagens/images (1).jpg" alt="">
+        <img src="./imagens/Pizza-Bar-02.jpg" alt="">
+
         </article>
     </main>
     <footer>
