--- a/cardapio.html
+++ b/cardapio.html
@@ -21,7 +21,7 @@
     <article>
         <h2>Cardápio</h2>
         <h3>Pizzas</h3>
-        <table border="1">
+        <table >
             <tr>
                 <th>Mussarela</th><th>grande-80.00</th><th>pequena-50.00</th>
             </tr>
@@ -81,7 +81,7 @@
     </article>
     <article>
         <h3>Bebidas</h3>
-        <table border="1">
+        <table>
             <tr>
                 <th>Refrigerantes</th><th>grande 2L-20.00</th><th>pequena 350ml-12.00</th>
             </tr>
