--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </ul>
     </nav>
 </header>
+
     <main>
         <article >
             <h2></h2>
@@ -29,13 +30,19 @@
 
         
         <h3>Conheça nosso ambiente</h3>
-        <article class="imagem"> 
+        <div class="um">
+        <article> 
         <img src="./imagens/ambiente-interno.jpg"alt="">
-        <img src="./imagens/images (1).jpg" alt="">
-        <img src="./imagens/Pizza-Bar-02.jpg" alt="">
-
         </article>
+    <article>
+        <img src="./imagens/images (1).jpg" alt="">
+    </article>
+        <article>
+        <img src="./imagens/Pizza-Bar-02.jpg" alt="">
+        </article>
+    </div>
     </main>
+
     <footer>
         <p>&copy; 2024-Pizzaria a menhor da região</p>
     </footer>
