--- a/cardapio.html
+++ b/cardapio.html
@@ -23,10 +23,10 @@
         <h3>Pizzas</h3>
         <table>
             <tr>
-                <th>Mussarela</th><th>grande-80.00</th><th>pequena-50.00</th>
+                <th>Muçarela</th><th>grande-80.00</th><th>pequena-50.00</th>
             </tr>
             <tr>
-                <td>Milho,mussarela,azeitona,oregano</td>
+                <td>Molho tomate,muçarela,azeitona,oregano</td>
             </tr>
             <tr>
                 <th>Calabresa</th><th>grande-85.00</th><th>pequena-55.00</th>
@@ -38,50 +38,44 @@
                 <th>Nordestina</th><th>grande-90.00</th><th>pequena-70.00</th>
             </tr>
             <tr>
-                <td>Milho,mussarela,carne de sol,tomate,pimentão,cebola,azeitona,oregano</td>
+                <td>Milho de tomate,muçarela,carne de sol,tomate,requeijão,cebola,azeitona,oregano</td>
             </tr>
             <tr>
                 <th>Frango</th><th>grande-85.00</th><th>pequena-65.00</th>
             </tr>
             <tr>
-                <td>Milho,mussarela,frango,azeitona,oregano</td>
+                <td>Milho de tomate,muçarela,frango,azeitona,oregano</td>
             </tr>
             <tr>
                 <tr>
             <th>Frango c/ Catupiry</th><th>grande-95.00</th><th>pequena-75.00</th>
                 </tr>
                 <tr>
-                    <td>Milho,mussarela,frango,catupiry,azeitona,oregano</td>
+                    <td>Milho,muçarela,frango,catupiry,azeitona,oregano</td>
                 </tr>
                 <tr>
                 <th>Pressunto</th><th>grande-80.00</th><th>pequena-60.00</th>
             </tr>
             <tr>
-                <td>Milho,mussarela,pressunto,azeitona,oregano</td>
-            </tr>
-            <tr>
-                <th>Frango</th><th>grande-85.00</th><th>pequena-65.00</th>
-            </tr>
-            <tr>
-                <td>Milho,mussarela,frango,azeitona,oregano</td>
+                <td>Milho,muçarela,pressunto,azeitona,oregano</td>
             </tr>
             <tr>
                 <th>Toscana</th><th>grande-85.00</th><th>pequena-65.00</th>
             </tr>
             <tr>
-                <td>Milho,mussarela,calabresa,ovo,azeitona,oregano</td>
+                <td>Milho,muçarela,calabresa,ovo,azeitona,oregano</td>
             </tr>
             <tr>
                 <th>Atum</th><th>grande-80.00</th><th>pequena-60.00</th>
             </tr>
             <tr>
-                <td>Atum ralado,mussarela,cebola,azeitona,oregano</td>
+                <td>Atum ralado,muçarela,cebola,azeitona,oregano</td>
             </tr>
         </table>
     </article>
     <article>
         <h3>Bebidas</h3>
-        <table border="1">
+        <table>
             <tr>
                 <th>Refrigerantes</th><th>grande 2L-20.00</th><th>pequena 350ml-12.00</th>
             </tr>
@@ -89,7 +83,7 @@
                 <td>coca-cola,fanta,guaraná,sóda</td>
             </tr>
             <tr>
-                <th>Sucos naturais</th><th>15.00</th>
+                <th>Sucos naturais-15.oo</th>
             </tr>
             <tr>
                 <td>Laranja,maracuja,manga,acerola</td>
@@ -108,7 +102,7 @@
             </tr>
             <tr>
                 <tr>
-            <th>Chopp</th><th>claro-15.00</th><th>escuro-15.00</th>
+            <th>Chopp</th><th>claro-15.00,escuro-15.00</th>
                 </tr>
                 <tr>
                     <td>Brahma</td>
