--- a/cardapio.html
+++ b/cardapio.html
@@ -10,7 +10,8 @@
 <header>
     <h1>Pizzaria Cardápio</h1>
     <nav>
-        <ul>
+        <h2><a href="">Menu &equiv;</a></h2>
+        <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="cardapio.html">Cardápio</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -79,32 +80,32 @@
         <h3>Bebidas</h3>
         <table>
             <tr>
-                <th>Refrigerantes</th><th>grande 2L-20.00</th><th>pequena 350ml-12.00</th>
+                <th>Refrigerantes</th><th>grande 2L-20.00 pequena 350ml-12.00</th>
             </tr>
             <tr>
                 <td>coca-cola,fanta,guaraná,sóda</td>
             </tr>
             <tr>
-                <th>Sucos naturais-15.oo</th>
+                <th>Sucos naturais-15.00</th>
             </tr>
             <tr>
                 <td>Laranja,maracuja,manga,acerola</td>
             </tr>
             <tr>
-                <th>Cerveja</th><th>garrafa-20.00</th><th>lata-10.00</th>
+                <th>Cerveja</th><th>garrafa-20.00 lata-10.00</th>
             </tr>
             <tr>
                 <td>Skol,Brahma,Itaipava</td>
             </tr>
             <tr>
-                <th>Cerveja</th><th>garrafa-25.00</th><th>lata-15.00</th>
+                <th>Cerveja</th><th>garrafa-25.00 lata-15.00</th>
             </tr>
             <tr>
                 <td>Heineken,Budweiser,Original,Stella</td>
             </tr>
             <tr>
                 <tr>
-            <th>Chopp</th><th>claro-15.00,escuro-15.00</th>
+            <th>Chopp</th><th>claro-15.00 escuro-15.00</th>
                 </tr>
                 <tr>
                     <td>Brahma</td>
@@ -115,6 +116,7 @@
 
 <footer>
     <p>&copy; 2024-Pizzaria a menhor da região</p>
-</footer>  
+</footer> 
+<script src="js/menu.js"></script>
 </body>
 </html>
