--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,8 @@
 <header>
     <h1>Pizzaria Contato</h1>
     <nav>
-        <ul>
+        <h2><a href="">Menu &equiv;</a></h2>
+        <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="cardapio.html">Cardápio</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -33,6 +34,6 @@
 <footer>
     <p>&copy; 2024-Pizzaria a menhor da região</p>
 </footer>
-    
+<script src="js/menu.js"></script>  
 </body>
 </html>
