--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-<header>
+<header class="limitador">
     <h1>Pizzaria Contato</h1>
     <nav>
         <h2><a href="">Menu &equiv;</a></h2>
